# ijson

./: .gitattributes  .gitignore  CHANGELOG.md  Cargo.toml  README.md  comparison.csv  comparison.xlsx  fix_array.sed  remove_specialization.patch
.github/workflows/: publish.yml  toolchain.yml
examples/: comparison.rs  generate.rs
fuzz/: Cargo.toml  README.md
fuzz/fuzz_targets/: json.rs  number_ord.rs  number_str.rs  number_value.rs  serde_roundtrip.rs
src/: alloc.rs  array.rs  de.rs  interned.rs  lib.rs  lib.rs.bak  macros.rs  number.rs  numeric_edge_cases.rs  object.rs  rkyv_ser.rs  scalar.rs  ser.rs  string.rs  thin.rs  unsafe_string.rs  value.rs
src/inline/: mod.rs  number.rs  string.rs
src/value/: array.rs  bigint.rs  decimal.rs  interned.rs  mod.rs  number.rs  numeric.rs  object.rs  scalar.rs  string.rs
src/value/inline/: constant.rs  mod.rs  number.rs  number_binary.rs  number_decimal.rs  string.rs
src/value/scalar/: float.rs  int.rs  mod.rs  uint.rs
test_data/: template.hbs
tests/: codegen.rs  codegen_constants.rs  codegen_probes.rs  conversions.rs  serde_bytes.rs  serde_derive.rs  serde_value.rs
tests/common/: mod.rs
