[package]
name = "ijson"
version = "0.1.4"
authors = ["Diggory Blake <diggsey@googlemail.com>"]
edition = "2018"
readme = "README.md"
license = "MIT OR Apache-2.0"
repository = "https://github.com/Diggsey/ijson"
description = "A more memory efficient replacement for serde_json::Value"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[features]
tracing = ["mockalloc/tracing"]

[dependencies]
dashmap = { version = "5.5", features = ["raw-api"] }
lazy_static = "1.4.0"
serde = "1.0.173"
serde_json = "1.0.103"
ctor = { version = "0.2.4", optional = true }
indexmap = { version = "2.0.0", optional = true }

[dev-dependencies]
mockalloc = "0.1.2"
ctor = "0.1.16"
rand = "0.8.4"
