[package]
name = "ijson"
version = "0.1.7"
authors = ["Diggory Blake <diggsey@googlemail.com>"]
edition = "2018"
readme = "README.md"
license = "MIT OR Apache-2.0"
repository = "https://github.com/Diggsey/ijson"
description = "A more memory efficient replacement for serde_json::Value"
keywords = ["json", "serde", "string-interning", "memory-efficient", "value"]
categories = ["data-structures", "encoding"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[features]
tracing = ["mockalloc/tracing"]
broken-borrow-impl-compat = []
# Store JSON numbers as exact decimals (`mantissa * 10^exp` inline, and a heap
# arbitrary-precision decimal for larger values) instead of rounding to `f64`.
# When disabled, the same inline slot holds a binary float (`mantissa * 2^exp`),
# so every inline number is exactly an `f64`. Mirrors serde_json's feature.
arbitrary_precision = ["serde_json/raw_value"]

# `codegen_probes` is set only by the codegen tests' nested build (see
# tests/codegen_probes.rs); it exposes hooks that let a probe tell the compiler which
# representation a value uses. It is never set for a normal build.
[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(codegen_probes)'] }

[dependencies]
dashmap = { version = "5.5", features = ["raw-api"] }
lazy_static = "1.5.0"
serde = "1.0.228"
serde_json = "1.0.149"
ctor = { version = "0.6.3", optional = true }
indexmap = { version = "2.13.0", optional = true }

[dev-dependencies]
mockalloc = "0.1.2"
ctor = "0.6.3"
rand = "0.10.0"
